test/compile_errors/err_regex_invalid_flag.w
//! expect-check-fail: invalid regex flag

fn main:
    let _ = /abc/q
